unpackaged/main/default/objects/AddressValidationRules__mdt/AddressValidationRules__mdt.object-meta.xml
<CustomObject>
    <label>AddressValidationRules</label>
    <pluralLabel>AddressValidationRules</pluralLabel>
</CustomObject>