unpackaged/main/default/objects/AddressValidationRules__mdt/fields/PhoneNumberRegex__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumberRegex__c</fullName>
    <label>PhoneNumberRegex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>