unpackaged/main/default/objects/AddressValidationRules__mdt/fields/StreetNumberRegex__c.field-meta.xml
<CustomField>
    <fullName>StreetNumberRegex__c</fullName>
    <label>StreetNumberRegex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>