unpackaged/main/default/objects/AddressValidationRules__mdt/fields/StreetRegex__c.field-meta.xml
<CustomField>
    <fullName>StreetRegex__c</fullName>
    <label>StreetRegex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>